# audio-collection-manager-api-rust

./: .env.example  .gitignore  Cargo.toml  README.md  database_anonymous_listen_log.surql  database_events_fix.surql  database_events_migration.surql  database_schema.surql  old_database_schema.surql  recompute_aggregates_album_playlist_total_duration.surql
.github/workflows/: rust.yml
src/: error.rs  main.rs
src/auth/: jwt_service.rs  mod.rs  models.rs  password_service.rs  token_service.rs
src/controllers/: album.rs  album_controller.rs  albums.rs  artist.rs  artist_controller.rs  auth_controller.rs  favorite_controller.rs  mod.rs  playlist_controller.rs  search_controller.rs  song_controller.rs  song_handler.rs  user.rs  user_controller.rs
src/data/: 000031.sst  000034.sst  000039.sst  000044.sst  IDENTITY  MANIFEST-000046
src/helpers/: album_helpers.rs  artist_helpers.rs  favorite_helpers.rs  mod.rs  playlist_helpers.rs  song_helpers.rs  thing_helpers.rs
src/middlewares/: mod.rs  mw_auth.rs  mw_rate_limit.rs
src/model/: album.rs
src/models/: album.rs  albums.rs  artist.rs  database_helpers.rs  favorite.rs  mod.rs  music_genre.rs  pagination.rs  playlist.rs  song.rs  user.rs
src/routes/: album_routes.rs  albums.rs  artist.rs  artist_routes.rs  auth_routes.rs  favorite_routes.rs  favorites.rs  mod.rs  playlist_routes.rs  search_routes.rs  song_routes.rs  user_routes.rs
src/services/: album.rs  album_service.rs  artist.rs  artist_service.rs  auth_service.rs  badge_service.rs  favorite_service.rs  hcaptcha_service.rs  mod.rs  playlist_service.rs  search_service.rs  song_service.rs  user.rs  user_service.rs
src/validators/: listen_validator.rs  mod.rs
src/web/: auth.rs  mod.rs  mw_auth.rs  mw_rate_limit.rs  routes_albums.rs  routes_login.rs
