[package]
name = "audio-collection-manager-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tower-http = { version = "0.6.2", features = ["fs"] }
strum_macros = "0.27.1"
lazy-regex = "3.4.1"
surrealdb = { version = "2.2.1", features = ["kv-rocksdb", "protocol-ws"] }
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
dotenvy = "0.15.7"

[dev-dependencies]
anyhow = "1.0.95"
httpc-test = "0.1.10"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
